--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ html {
 body {
   font-size: 2.4rem;
   font-family: sans-serif;
-  color: #5a3e2b;
+  color: #ffebb3;
   font-family: "Quicksand";
   font-weight: 500;
 }
@@ -34,7 +34,7 @@ body {
 
 h1 {
   text-align: center;
-  background-color: #f4a226;
+  background-color: #E65F5C;
   font-family: "Monoton";
   font-size: 8rem;
   text-transform: uppercase;
@@ -45,7 +45,7 @@ h1 {
 }
 
 .add-form {
-  background-color: #e5771f;
+  background-color: #0F0326;
   padding: 2.8rem 0;
   display: flex;
   align-items: center;
@@ -74,11 +74,11 @@ input {
 
 .add-form button {
   text-transform: uppercase;
-  background-color: #76c7ad;
+  background-color: #FFFF82;
 }
 
 .list {
-  background-color: #5a3e2b;
+  background-color: #0F0326;
   color: #ffebb3;
   padding: 4rem 0;
 
@@ -119,7 +119,7 @@ input {
 input[type="checkbox"] {
   height: 2rem;
   width: 2rem;
-  accent-color: #e5771f;
+  accent-color: #DCE2C8;
 }
 
 .list li button {
@@ -132,7 +132,8 @@ input[type="checkbox"] {
 }
 
 .stats {
-  background-color: #76c7ad;
+  background-color: #FFFF82;
+  color: #5a3e2b;
   text-align: center;
   font-weight: 700;
   padding: 3.2rem 0;
